language/move-lang/tests/move_check/parser/expr_while_braces.move
module M {
    f(v: u64) {
        // Braces required for assignment inside "while" expression
        while (v < 10) v = v + 1
    }
}
